--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<h1>Hello Daydash</h1>
+<script src="lib/react.development.js"></script>
+<script src="lib/react-dom.development.js"></script>
+
+<div id="root"></div>
+
+<script src="dist/index.js"></script>
