--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<head>
+    <link rel="stylesheet" type="text/css" href="src/scss/index.css">
+</head>
+
 <script src="lib/react.development.js"></script>
 <script src="lib/react-dom.development.js"></script>
 
