filter to requested calendars

--- a/options.html
+++ b/options.html
@@ -5,8 +5,15 @@
     <title>Options</title>
 </head>
 <body>
+
+<div>
     <label>Todoist Key</label>
     <input id="todoKey" type="text"/>
+</div>
+<div>
+    <label>Calendar Names</label>
+    <input id="calIds" type="text"/>
+</div>
 
     <div id="status"></div>
     <button id="save">Save</button>
