--- a/options.html
+++ b/options.html
@@ -18,6 +18,6 @@
     <div id="status"></div>
     <button id="save">Save</button>
 
-    <script src="src/options.js"></script>
+    <script src="dist/options.js"></script>
 </body>
 </html>
