convert options page to react

--- a/options.html
+++ b/options.html
@@ -1,23 +1,15 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <title>Options</title>
+    <link rel="stylesheet" type="text/css" href="src/scss/options.css">
 </head>
+
+<script src="lib/react.development.js"></script>
+<script src="lib/react-dom.development.js"></script>
+
 <body>
-
-<div>
-    <label>Todoist Key</label>
-    <input id="todoKey" type="text"/>
-</div>
-<div>
-    <label>Calendar Names</label>
-    <input id="calIds" type="text"/>
-</div>
-
-    <div id="status"></div>
-    <button id="save">Save</button>
-
-    <script src="dist/options.js"></script>
+<div id="root"></div>
+<script src="dist/options.js"></script>
 </body>
+
 </html>
